Android: load/save jvs eeprom

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -377,12 +377,12 @@ endif
 
 EXECUTABLE_STRIPPED=nosym-reicast.$(PLATFORM_EXT)
 ifdef NAOMI
-    CFLAGS += -D TARGET_NAOMI -D SAVE_EPPROM
+    CFLAGS += -D TARGET_NAOMI
     DC_PLATFORM=naomi
     EXECUTABLE=reicast_naomi.$(PLATFORM_EXT)
     EXECUTABLE_NAME=reicast-naomi
 else ifdef ATOMISWAVE
-    CFLAGS += -D DC_PLATFORM=DC_PLATFORM_ATOMISWAVE -D SAVE_EPPROM
+    CFLAGS += -D DC_PLATFORM=DC_PLATFORM_ATOMISWAVE
     DC_PLATFORM=atomiswave
     EXECUTABLE=reicast_awave.$(PLATFORM_EXT)
     EXECUTABLE_NAME=reicast-awave
