win32: call os_DoEvents on the emu/main thread and other fixes

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -235,19 +235,19 @@ else ifneq (,$(findstring vero4k,$(platform)))
 
 # Windows
 else ifneq (,$(findstring win32,$(platform)))
-    X64_REC := 1
     NOT_ARM := 1
-    CFLAGS += -DTARGET_NO_WEBUI -fno-builtin-sqrtf -funroll-loops -DHAVE_FSEEKO
+    CFLAGS += -DTARGET_NO_WEBUI -fno-builtin-sqrtf -funroll-loops -DHAVE_FSEEKO -D TARGET_NO_AREC
     LDFLAGS += -static-libgcc -static-libstdc++
     LIBS := -lopengl32 -lwinmm -lgdi32 -lwsock32 -ldsound -lcomctl32 -lcomdlg32 -lxinput -liphlpapi
     PLATFORM_EXT := exe
     CC = gcc
     CXX = g++
 ifeq ($(WITH_DYNAREC), x86)
+    X86_REC := 1
     LDFLAGS += -m32
     CFLAGS += -m32
 else
-    CFLAGS += -D TARGET_NO_AREC
+    X64_REC := 1
 endif
     undefine USE_X11
     undefine USE_ALSA
