--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,9 @@ after_build:
   - cmd: cd ..\..
   - cmd: mkdir artifacts
   - cmd: move shell\linux\reicast.exe artifacts/reicast-win_x64-fast-%APPVEYOR_REPO_COMMIT%.exe
+  - cmd: copy %EXTRA_PATH%\libgcc_s_seh-1.dll artifacts
+  - cmd: copy %EXTRA_PATH%\libwinpthread-1.dll artifacts
+  - cmd: copy %EXTRA_PATH%\libgomp-1.dll artifacts
 
 artifacts:
   - path: artifacts
